--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -12,7 +12,7 @@ input {
 filter {
   if [container_name] == "beepong-postgres_db" {
     mutate {
-      add_field => { "service" => "postgres" }
+      add_field => { "service_name" => "postgres" }
     }
   }
   # Convert host_name to a string if it's an object with a name field
@@ -41,12 +41,12 @@ output {
       ilm_policy => "Backend-logs-index-policy"
       user => "${ELASTIC_USER}"
       password => "${ELASTIC_PASSWORD}"
-      ssl => true
+      ssl_enabled => true
       ssl_certificate_authorities => ["certs/ca/ca.crt"]
     }
   }
   # Postgres logs with ILM
-  if [service] == "postgres" {
+  if [service_name] == "postgres" {
     elasticsearch {
       hosts => ["https://elasticsearch:9200"]
       ilm_enabled => true
@@ -55,7 +55,7 @@ output {
       ilm_policy => "Postgres-logs-index-policy"
       user => "${ELASTIC_USER}"
       password => "${ELASTIC_PASSWORD}"
-      ssl => true
+      ssl_enabled => true
       ssl_certificate_authorities => ["certs/ca/ca.crt"]
     }
   }
@@ -69,7 +69,7 @@ output {
       ilm_policy => "Nginx-logs-index-policy"
       user => "${ELASTIC_USER}"
       password => "${ELASTIC_PASSWORD}"
-      ssl => true
+      ssl_enabled => true
       ssl_certificate_authorities => ["certs/ca/ca.crt"]
     }
   }
