--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       context: ./srcs/backend
     volumes:
       - ./srcs/backend/beePong:/usr/src/backend/beePong
+      - nginx_ssl_certs:/etc/nginx/ssl  # <-- Access certs inside the backend
     env_file:
       - .env
     ports:
@@ -46,6 +47,7 @@ services:
       context: ./srcs/nginx
     volumes:
       - ./srcs/frontend:/var/www/html
+      - nginx_ssl_certs:/etc/nginx/ssl  # <-- Share the cert directory with host
     ports:
       - 443:443
     restart: on-failure
@@ -66,4 +68,5 @@ services:
 
 volumes:
   postgres_data:
+  nginx_ssl_certs:
 
