--- a/srcs/backend/requirements.txt
+++ b/srcs/backend/requirements.txt
@@ -10,4 +10,7 @@ requests==2.32.3
 # Django Server
 daphne===4.1.2
 asgiref===3.8.1
+# AI bot connection
 websockets===13.0
+aiohttp===3.10.5
+beautifulsoup4===4.12.3
