--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
       - ./srcs/frontend:/var/www/html
       - nginx_logs:/var/log/nginx 
     ports:
-      - 443:443
+      - 1443:443
     logging:
       driver: gelf
       options:
@@ -256,15 +256,15 @@ services:
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
     mem_limit: ${ES_MEM_LIMIT}
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+   # ulimits:
+   #   memlock:
+   #     soft: -1
+   #     hard: -1
     healthcheck:
       test:
         [
           "CMD-SHELL",
-          "curl -s --cacert config/certs/ca/ca.crt https://localhost:9200 | grep -q 'missing authentication credentials'",
+          "curl -s --cacert config/certs/ca/ca.crt 'https://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=50s' -u 'elastic:${ELASTIC_PASSWORD}'",
         ]
       interval: 10s
       timeout: 10s
@@ -362,11 +362,3 @@ services:
       - ELASTIC_USER=elastic
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTIC_HOSTS=https://elasticsearch:9200
-    entrypoint: >
-      bash -c 'for policy in Backend-logs-index-policy Nginx-logs-index-policy Postgres-logs-index-policy; do
-        until curl -s --cacert /usr/share/logstash/certs/ca/ca.crt -u "elastic:${ELASTIC_PASSWORD}" https://elasticsearch:9200/_ilm/policy/$policy | grep -q "$policy"; do
-          echo "Waiting for $policy to be created..."
-          sleep 5
-        done
-      done;
-      exec /usr/local/bin/docker-entrypoint'
