--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,15 @@ services:
       retries: 5
     restart: on-failure
 
+  redis:
+    container_name: redis
+    image: redis:7.4.0
+    ports:
+      - "6379:6379"
+    restart: on-failure
+    volumes:
+      - redis_data:/data
+
   nginx:
     container_name: nginx
     build:
@@ -66,4 +75,5 @@ services:
 
 volumes:
   postgres_data:
+  redis_data:
 
