--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,8 @@ volumes:
 services:
   db:
     image: postgres:16
-    container_name: postgres_db environment:
+    container_name: postgres_db 
+    environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
