--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -43,6 +43,7 @@ server {
         proxy_set_header 	X-Forwarded-Proto $scheme;
         proxy_read_timeout  86400s;
         proxy_send_timeout  86400s;
+        proxy_connect_timeout 86400s;
     }
 	
     # Serve Django admin interface
