--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -6,6 +6,9 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "babel-jest": "^29.7.0",
     "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3"
   },
@@ -19,6 +22,11 @@
     "resetMocks": false,
     "setupFiles": [
       "./setupJest.js"
-    ]
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": ["/node_modules/"],
+    "moduleFileExtensions": ["js", "jsx", "json", "node"]
   }
 }
