--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -44,6 +44,9 @@ server {
         proxy_read_timeout  86400s;
         proxy_send_timeout  86400s;
         proxy_connect_timeout 86400s;
+        proxy_buffer_size   128k;   # Increased buffer size
+        proxy_buffers       4 256k; # Increased number and size of buffers
+        proxy_busy_buffers_size 256k; # Increased busy buffers size
     }
 	
     # Serve Django admin interface
