--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     restart: on-failure
     healthcheck:
       test: ["CMD-SHELL", "psql -U ${POSTGRES_USER} -d ${POSTGRES_DB} --password ${POSTGRES_PASSWORD}"] 
-      # interval: 10s
+      interval: 10s
       timeout: 5s
       retries: 5
 
@@ -72,7 +72,7 @@ services:
         condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000/health/ || exit 1"]
-      # interval: 30s
+      interval: 30s
       timeout: 10s
       retries: 5
     restart: on-failure
@@ -256,10 +256,10 @@ services:
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
     mem_limit: ${ES_MEM_LIMIT}
-   # ulimits:
-   #   memlock:
-   #     soft: -1
-   #     hard: -1
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
     healthcheck:
       test:
         [
