Feature/070 set up jest and cypress (#72)
* setting up jest

* optimize docker compose

* adding cypress

* fix allow host issue

* update makefile

* updated gitignore and package-lock.json

* fix jest

* fix cypress

* Fix deprecated docker-compose into docker compose

---------

Co-authored-by: Lionel Clerc <lionel.clerc@protonmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,22 @@ services:
     depends_on:
       backend_dummy:
         condition: service_healthy
+    
+  jest:
+    container_name: beepong-jest
+    build:
+      context: srcs/frontend
+      dockerfile: tests/Dockerfile
+
+  cypress:
+    container_name: beepong-cypress
+    build:
+      context: ./cypress
+      dockerfile: Dockerfile
+    environment:
+      - CYPRESS_baseUrl=https://nginx
+    depends_on:
+      - nginx
 
   pgadmin:
     container_name: beepong-pgadmin
