--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,8 +110,11 @@ services:
       dockerfile: Dockerfile
     environment:
       - CYPRESS_baseUrl=https://nginx
+      - CYPRESS_BROWSER=${CYPRESS_BROWSER:-chrome}
     depends_on:
       - nginx
+    entrypoint: ["/bin/sh", "-c"]
+    command: ["npx cypress run --browser ${CYPRESS_BROWSER:-chrome}"]
 
   pgadmin:
     container_name: beepong-pgadmin
